[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{ name = "Tim D. Smith", email = "tim@tds.xyz" }]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["attrs", "typing-extensions", "typing-inspect"]
description = "Support for US Swimming SDIF v3 files"
name = "sdif"
readme = "README.md"
requires-python = ">=3.9"
version = "23.2.0"

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "pyright", "pytest"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.9"

[tool.setuptools.package-data]
sdif = ["py.typed"]
